fix css
use float: right instead of position: absolute for card-counter, as
we want to have the text flow respect the counter. otherwise long text
may overlap with the buttons on the feedbacks page.

--- a/static/dib.css
+++ b/static/dib.css
@@ -576,9 +576,12 @@ orange: #D2892B;
 .card-counter {
     color: #636c72;
     font-size: 0.8rem;
+    /*
     position: absolute;
     right: 1rem;
     top: 1rem;
+    */
+    float: right;
 }
 
 span.help-block {
